src/objects/Process_Builder_Queues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used by process builders to access queue names</description>
    <fields>
        <fullName>Applicant_Read_RT__c</fullName>
        <label>Applicant Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets_Read_RT__c</fullName>
        <label>Assets Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBR_Line_Read_RT__c</fullName>
        <label>CBR Line Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBR_Read_RT__c</fullName>
        <label>CBR Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_doc_record_type__c</fullName>
        <label>Closing doc record type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Queue_ID__c</fullName>
        <label>Commitment Queue ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commitment_Request_Record_Type__c</fullName>
        <label>Commitment Request Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debts_Expenses_Read_RT__c</fullName>
        <label>Debts Expenses Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement_Issues__c</fullName>
        <label>Disbursement Issues</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Verification_Queue__c</fullName>
        <description>Queue used for attorneys to review any checklist items that were marked invalid and need further verification</description>
        <label>Document Verification Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_request_Record_type__c</fullName>
        <label>Document request Record type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRS_Read_RT__c</fullName>
        <label>IRS Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Read_RT__c</fullName>
        <label>Insurance Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LV_Assignment_Queue_ID__c</fullName>
        <label>LV Assignment Queue ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Assistance_Team_ID__c</fullName>
        <label>Loan Assistance Team ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Office_Queue_ID__c</fullName>
        <label>Loan Office Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Read_RT__c</fullName>
        <label>Mortgage Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_Read_RT__c</fullName>
        <label>PAR Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Read_RT__c</fullName>
        <label>Property Read RT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_Only_RT_for_Damaged_Property__c</fullName>
        <label>Read Only RT for Damaged Property</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLV_Assignment_Queue_ID__c</fullName>
        <label>SLV Assignment Queue ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Case_Manager_Queue__c</fullName>
        <label>Senior Case Manager Queue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Generated_Request_Record_Type__c</fullName>
        <description>Capture the Id of System Generated Request Record Type</description>
        <label>System Generated Request Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Queue_ID__c</fullName>
        <label>Team Lead Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Process Builder Queues</label>
</CustomObject>